# focalplane

./: .gitignore  CFL-TEST-BENCH_server_log.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  pennance.md  units-transformation-todo.md
ephemeris/: Cargo.toml
ephemeris/src/: lib.rs
ephemeris/src/celestial/: mod.rs
ephemeris/src/coordinates/: mod.rs
ephemeris/src/time_utils/: mod.rs
exail/: Cargo.toml
exail/analysis/: plot_gyro.py
exail/src/: checksum.rs  health_status.rs  lib.rs  parser.rs  temperature.rs  time.rs
exail/src/messages/: gyro_data_filt.rs  gyro_data_full.rs  gyro_data_raw.rs  mod.rs
exolambda/: Cargo.toml
exolambda/src/: cobs.rs  lib.rs  packet.rs
flight-software/: Cargo.toml  README.md  README_REMOTE_TESTING.md  README_V4L2.md  build-arm64.sh  docker-compose.yml  prometheus.yml  setup-arm64-cross-compilation.sh  test-remote-orin.sh
flight-software/.cargo/: config.toml
flight-software/grafana/dashboards/: jetson-orin-monitoring.json
flight-software/src/: hardware_monitor.rs  lib.rs  prometheus_server.rs  v4l2_capture.rs
flight-software/src/camera/: mod.rs  neutralino_imx455.rs  v4l2_utils.rs
flight-software/src/hil/: endpoints.rs  image_utils.rs  latency.rs  mod.rs  state.rs
flight-software/templates/: camera_status.html
flight-software/tests/: neutralino_imx455_integration.rs  v4l2_utils_integration.rs
hardware/: Cargo.toml
hardware/src/: lib.rs
hardware/src/exolambda/: cobs.rs  packet.rs
hardware/src/ftdi/: mock_gyro_packets.rs  mod.rs
hardware/src/nsv455/: mod.rs
hardware/src/orin/: errors.rs  gpio.rs  mod.rs  monitor.rs
hardware/src/pi/: mod.rs  s330.rs
hardware/src/poa/: camera.rs  errors.rs  mod.rs  roi.rs
hardware/tests/: neutralino_imx455_integration.rs  v4l2_utils_integration.rs
meter-math/: Cargo.toml
meter-math/src/: icp.rs  icp_bias_test.rs  lib.rs  matrix2.rs  spline.rs  stats.rs
monocle/: Cargo.toml  build.rs
monocle/src/: callback.rs  config.rs  error.rs  filters.rs  lib.rs  mock_camera.rs  selection.rs  state.rs  tracking_plots.rs
monocle/src/controllers/: los_controller.rs  mod.rs
monocle/tests/: README.md  common.rs  end_to_end.rs  position_tracking.rs  simple.rs  simulator_basic.rs  simulator_integration.rs  simulator_minimal.rs  synthetic.rs  test_helpers.rs  tracking_with_plots.rs
monocle_harness/: Cargo.toml
monocle_harness/src/: helpers.rs  lib.rs  motion_profiles.rs  proto_control.rs  runner.rs  simulator_camera.rs  tracking_plots.rs
monocle_harness/tests/: simulator_integration.rs  simulator_minimal.rs
nsv455/: Cargo.toml
nsv455/src/: lib.rs  v4l2_capture.rs
nsv455/src/camera/: mod.rs  neutralino_imx455.rs  nsv455_camera.rs
nsv455/src/hil/: camera_info.rs  endpoints.rs  image_utils.rs  mod.rs
nsv455/tests/: neutralino_imx455_integration.rs  v4l2_utils_integration.rs
proto-control/: .gitignore  Cargo.toml  api-spec.md  generate_docs.py
proto-control/src/: lib.rs
shared/: Cargo.toml
shared-wasm/: Cargo.toml
shared-wasm/src/: fsm.rs  http_client.rs  lib.rs  tracking.rs
shared/src/: bad_pixel_map.rs  cached_star_catalog.rs  camera_interface.rs  config_storage.rs  dark_frame.rs  frame_writer.rs  fsm_transform.rs  image_size.rs  lib.rs  optical_alignment.rs  pattern_client.rs  pattern_command.rs  range_arg.rs  ring_buffer.rs  star_projector.rs  system_info.rs  tracking_message.rs  units.rs  zmq.rs
shared/src/algo/: icp.rs  lookup_table.rs  min_max_scan.rs  misc.rs  mod.rs  motion.rs  parallel.rs  psd.rs  spline.rs  stats.rs
shared/src/camera_interface/: mock.rs  mod.rs
shared/src/image_proc/: aperture_photometry.rs  centroid.rs  convolve2d.rs  histogram_stretch.rs  image.rs  mod.rs  source_snr.rs  test_patterns.rs
simulator/: Cargo.toml
simulator/benches/: render.rs
simulator/examples/: airy_disk_demo.rs  benchmark_convolve2d.rs  catalog_star_renderer.rs  catalog_stats.rs  centroid_accuracy_test.rs  chromatic_airy_demo.rs  convolution.rs  convolution_benchmark.rs  enhanced_star_renderer.rs  focal_plane_viz.rs  noise_dump.rs  object_detection.rs  run_benchmarks.rs  scope_view.rs  sensor_comparison.rs  star_bbox_detection.rs  star_detection.rs  star_field_renderer.rs  star_field_reticle.rs  star_simulation.rs  synthetic_star_renderer.rs  telescope_sampling_info.rs  undersampled_psf_bias.rs  wwt_failed_detection.rs  zodiacal_background.rs  zodical_background.rs
simulator/src/: lib.rs  scene.rs  shared_args.rs  star_math.rs  units.rs
simulator/src/algo/: bilinear.rs  icp.rs  icp_bias_test.rs  min_max_scan.rs  misc.rs  mod.rs  motion.rs  psd.rs  quaternion.rs  selection.rs  spline.rs
simulator/src/hardware/: dark_current.rs  gyro.rs  mod.rs  read_noise.rs  satellite.rs  sensor.rs  sensor_array.rs  sensor_noise.rs  star_projection.rs  telescope.rs
simulator/src/image_proc/: aabb.rs  airy.rs  centroid.rs  convolve2d.rs  histogram_stretch.rs  image.rs  mod.rs  noise.rs  overlay.rs  render.rs  segment.rs  thresholding.rs
simulator/src/io/: fits.rs  mod.rs
simulator/src/photometry/: color.rs  filters.rs  gaia.rs  human.rs  mod.rs  photoconversion.rs  quantum_efficiency.rs  spectrum.rs  stellar.rs  stis_zodiacal.rs  zodiacal.rs  zodical.rs
simulator/src/sims/: mod.rs  scene_runner.rs  (+1 more)
starfield/: Cargo.toml
starfield/src/: lib.rs
test-bench/: Cargo.toml  ORIN_SETUP.md  build.rs
test-bench-frontend/: Cargo.toml
test-bench-frontend/src/: calibrate_app.rs  camera_app.rs  fgs_app.rs  ws_image_stream.rs
test-bench-shared/: Cargo.toml
test-bench-shared/src/: calibrate_client.rs  fgs_client.rs  http_client.rs  lib.rs
test-bench/display-util/: Cargo.toml
test-bench/poa_cameras/: Cargo.toml  README.md
test-bench/src/: calibration_overlay.rs  camera_init.rs  camera_server.rs  display_utils.rs  embedded_assets.rs  fgs_ws_client.rs  gpio.rs  lib.rs  mjpeg.rs  tracking_collector.rs  ws_log_stream.rs  ws_stream.rs
test-bench/templates/: calibrate_view.html  camera_status.html  live_view.html
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
track/: Cargo.toml
track/src/: lib.rs
viz/: Cargo.toml
viz/src/: lib.rs
(+164 files in other folders)
