[workspace]
members = [
    "simulator",
    "flight-software",
    "monocle",
    "monocle_harness",
    "shared",
    "test-bench",
    "test-bench-frontend",
    "nsv455",
    "exolambda",
    "exail",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
description = "Space telescope simulation system"
repository = "https://github.com/meawoppl/meter-sim"
license = "MIT"
# Common dependencies will go here