[workspace]
members = [
    "meter-math",
    "simulator",
    "monocle",
    "monocle_harness",
    "shared",
    "test-bench",
    "test-bench-frontend",
    "hardware",
    "test-bench-shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
description = "Space telescope simulation system"
repository = "https://github.com/meawoppl/meter-sim"
license = "MIT"
# Common dependencies will go here