[package]
name = "ephemeris"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Celestial body position and motion calculations"
repository.workspace = true
license.workspace = true

[dependencies]
# Astronomy-specific dependencies
nalgebra = "0.32"  # Linear algebra
time = "0.3"       # Time handling
thiserror = "1.0"  # Error handling
serde = { version = "1.0", features = ["derive"] }  # Serialization
test_helpers = { path = "../test_helpers" }

[dev-dependencies]
criterion = "0.5"  # Benchmarking