[package]
name = "exail"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Exail Asterix NS Gyro protocol parsing"
license.workspace = true

[dependencies]
bitflags = "2.10.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
thiserror = "1.0"
