[package]
name = "exolambda"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "ExoLambda Fine Steering Mirror (FSM) driver"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
crc = "3.3.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
hardware-tests = []
