[package]
name = "flight-software"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Flight computer monitoring and telemetry system for Jetson Orin"
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.32"
glob = "0.3"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"