[package]
name = "flight-software"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Flight computer monitoring and telemetry system for Jetson Orin"
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.32"
glob = "0.3"
thiserror = "1.0"
v4l = "0.14.0"
v4l2-sys-mit = "0.3.0"
libc = "0.2"
image = "0.25.6"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
async-stream = "0.3"
base64 = "0.22"
env_logger = "0.11.8"
log = "0.4.27"

[dev-dependencies]
tokio-test = "0.4"
