[package]
name = "hardware"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hardware drivers for test bench equipment"
repository.workspace = true
license.workspace = true

[[bin]]
name = "fsm_tool"
path = "src/bin/fsm_tool.rs"

[[bin]]
name = "pi_fsm_test"
path = "src/bin/pi_fsm_test.rs"

[[bin]]
name = "v4l2_stride_test"
path = "src/bin/v4l2_stride_test.rs"

[[bin]]
name = "print_roi_constraints"
path = "src/bin/print_roi_constraints.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3.6"
axum = "0.8.7"
base64 = "0.22.1"
bytemuck = "1.24.0"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
crc = "3.3.0"
env_logger = "0.11.8"
image = "0.25.9"
libc = "0.2.178"
log = "0.4.29"
ndarray = { version = "0.16", features = ["rayon"] }
once_cell = "1.21.3"
playerone-sdk = "0.2.2"
prometheus = "0.14.0"
rust-embed = "8.9.0"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shared = { version = "0.1.0", path = "../shared" }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
v4l = "0.14.0"
v4l2-sys-mit = "0.3.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
hardware-tests = []
