[package]
name = "hardware"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hardware drivers for test bench equipment"
repository.workspace = true
license.workspace = true

[[bin]]
name = "fsm_tool"
path = "src/bin/fsm_tool.rs"
required-features = ["pi-fsm"]

[[bin]]
name = "pi_fsm_test"
path = "src/bin/pi_fsm_test.rs"
required-features = ["pi-fsm"]

[[bin]]
name = "v4l2_stride_test"
path = "src/bin/v4l2_stride_test.rs"
required-features = ["linux-bins"]

[[bin]]
name = "print_roi_constraints"
path = "src/bin/print_roi_constraints.rs"
required-features = ["linux-bins"]

[[bin]]
name = "mock_gyro"
path = "src/bin/mock_gyro.rs"
required-features = ["ftdi"]

[[bin]]
name = "listen_gyro"
path = "src/bin/listen_gyro.rs"
required-features = ["ftdi", "exail"]

[[bin]]
name = "parse_dump"
path = "src/exail/bin/parse_dump.rs"
required-features = ["exail"]

[[bin]]
name = "nsv455_test_pattern"
path = "src/bin/nsv455_test_pattern.rs"
required-features = ["linux-bins"]

[[bin]]
name = "v4l2_switch_timing"
path = "src/bin/v4l2_switch_timing.rs"
required-features = ["linux-bins"]

[dependencies]
anyhow = "1.0"
async-stream = "0.3.6"
axum = "0.8.7"
base64 = "0.22.1"
bitflags = "2.10.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
crc = "3.3.0"
env_logger = "0.11.8"
glob = "0.3"
image = "0.25.9"
libc = "0.2.178"
libftd2xx = "0.33.1"
log = "0.4.29"
sysinfo = "0.32"
ndarray = { version = "0.16", features = ["rayon"] }
once_cell = "1.21.3"
playerone-sdk = { version = "0.2.2", optional = true }
prometheus = "0.14.0"
rust-embed = "8.9.0"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.6"
# Internal dependencies - only needs camera_interface traits and image_proc
shared = { version = "0.1.0", path = "../shared", default-features = false }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
gpiod = "0.3.0"
v4l = "0.14.0"
v4l2-sys-mit = "0.3.0"

[dev-dependencies]
approx = "0.5.1"
tokio-test = "0.4"

[features]
default = []
# Full feature set for Linux deployments (all drivers)
full-linux = ["nsv455", "orin", "pi-fsm", "exail", "ftdi", "exolambda"]
# Cross-platform drivers only (no Linux-specific hardware)
cross-platform = ["pi-fsm", "exail", "ftdi", "exolambda"]
# Drivers with tests that can run in CI (no real hardware needed)
ci-testable = ["exail", "ftdi", "exolambda", "playerone"]
# Individual driver features
nsv455 = []        # NSV455 V4L2 camera driver (Linux only)
orin = []          # Jetson Orin GPIO/monitoring (Linux only)
pi-fsm = []        # PI E-727 FSM controller (Ethernet, cross-platform)
exail = []         # Exail gyroscope (serial protocol)
ftdi = []          # FTDI serial adapters
exolambda = []     # ExoLambda packet protocol
playerone = ["dep:playerone-sdk"]  # PlayerOne astronomy camera SDK
# Legacy/utility features
hardware-tests = []
linux-bins = ["nsv455", "orin"]
