[package]
name = "monocle"
version = "0.1.0"
edition = "2021"
authors = ["CosmicFrontierLabs"]
description = "Modular Orientation, Navigation & Optical Control Logic Engine"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# Array processing
ndarray = "0.15"

# Random number generation for test patterns
rand = "0.8"
rand_chacha = "0.3"

# Plotting
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "bitmap_backend"] }

# Internal dependencies
shared = { path = "../shared" }
simulator = { path = "../simulator" }
starfield = "0.2.2"

[dev-dependencies]
env_logger = "0.11"
approx = "0.5"
simulator = { path = "../simulator" }
starfield = "0.2.2"
