[package]
name = "monocle"
version = "0.1.0"
edition = "2021"
authors = ["CosmicFrontierLabs"]
description = "Modular Orientation, Navigation & Optical Control Logic Engine"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# Array processing
ndarray = "0.16"

# Internal dependencies
shared = { path = "../shared" }
nalgebra = "0.34.1"

[dev-dependencies]
env_logger = "0.11"
approx = "0.5"
rand = "0.8"
rand_chacha = "0.3"

[build-dependencies]
cc = "1.2.49"
