[package]
name = "monocle"
version = "0.1.0"
edition = "2021"
authors = ["CosmicFrontierLabs"]
description = "Modular Orientation, Navigation & Optical Control Logic Engine"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# Array processing
ndarray = "0.16"

# Internal dependencies - only needs core image processing and algorithms
shared = { path = "../shared", default-features = false }
nalgebra = "0.32"
rand = "0.9"
rand_chacha = "0.9"
shared-wasm = { version = "0.1.0", path = "../shared-wasm" }
thiserror = "2.0"

[features]
c-reference = []

[dev-dependencies]
env_logger = "0.11"
approx = "0.5"

[build-dependencies]
cc = "1.2.49"
