[package]
name = "monocle_harness"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
simulator = { path = "../simulator" }
monocle = { path = "../monocle" }
starfield = "0.2.3"

# For simulator_camera
ndarray = "0.16"

# For tracking_demo binary
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

# For tracking_plots
plotters = "0.3"
chrono = "0.4"

# For motion_profiles and fgs_shootout
rand = "0.8"
rand_chacha = "0.3"

# For fgs_shootout parallel execution
rayon = "1.7"
indicatif = "0.17"
log = "0.4.28"

[dev-dependencies]
approx = "0.5"
env_logger = "0.11"
