[package]
name = "nsv455"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Neutralino NSV455 camera V4L2 capture and HIL server"
repository.workspace = true
license.workspace = true

[[bin]]
name = "v4l2_stride_test"
path = "src/bin/v4l2_stride_test.rs"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3"
axum = "0.7"
base64 = "0.22"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
image = "0.25.6"
libc = "0.2"
log = "0.4.27"
ndarray = "0.16"
prometheus = "0.14.0"
rust-embed = "8.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
v4l = "0.14.0"
v4l2-sys-mit = "0.3.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
hardware-tests = []
