[package]
name = "proto-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Protocol definitions and control interfaces for external integrators"
repository.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
simple-mermaid = "0.1"
