[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["CosmicFrontierLabs"]
description = "Shared components and utilities for meter-sim modules"
license = "MIT OR Apache-2.0"

[dependencies]
# Core math and arrays
nalgebra = "0.32"
ndarray = { version = "0.16", features = ["rayon"] }
num-traits = "0.2"
num-complex = "0.4.6"
float-cmp = "0.9"

# Image processing
image = "0.25"
fitsio = { version = "0.21", features = ["array"] }
starfield = "0.2.3"

# Scientific computing
rustfft = "6.3.0"
scilib = "1.0"

# Parallel processing
rayon = "1.7"

# Utilities
rand = "0.8"
rand_distr = "0.4"
log = "0.4"
thiserror = "1.0"
url = "2.5"
urlencoding = "2.1"
once_cell = "1.19"
itertools = "0.11"
indicatif = "0.17"

# Graphics
resvg = { version = "0.45.0", features = ["text"] }
tiny-skia = "0.11"
usvg = "0.45.0"

# Units
uom = "0.37.0"

[dev-dependencies]
approx = "0.5"
rand_chacha = "0.3"
tempfile = "3.8"
