[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["CosmicFrontierLabs"]
description = "Shared components and utilities for meter-sim modules"
license = "MIT OR Apache-2.0"

[features]
default = ["full"]
full = ["tracking", "frame-writer", "config-storage", "system-info"]
tracking = []
frame-writer = ["dep:fitsio"]
config-storage = []
system-info = []

[dependencies]
# Core math and arrays
nalgebra = "0.32"
ndarray = { version = "0.16", features = ["rayon"] }
num-traits = "0.2"
num-complex = "0.4.6"
float-cmp = "0.9"

# Image processing
image = "0.25"
fitsio = { version = "0.21", features = ["array"], optional = true }
starfield = "0.2.3"

# Scientific computing
rustfft = "6.3.0"
scilib = "1.0"

# Parallel processing
rayon = "1.7"

# Utilities
rand = "0.9"
rand_distr = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
url = "2.5"
urlencoding = "2.1"
once_cell = "1.19"
itertools = "0.11"
indicatif = "0.17"

# Graphics
resvg = { version = "0.45.0", features = ["text"] }
tiny-skia = "0.11"
usvg = "0.45.0"

# Units
uom = "0.37.0"
serde_json = "1.0.145"
crossbeam-channel = "0.5.15"
anyhow = "1.0.100"
tracing = "0.1.41"
ureq = { version = "3.1.4", features = ["json"] }

# Shared types (WASM-compatible lightweight crate)
test-bench-shared = { version = "0.1.0", path = "../test-bench-shared" }
meter-math = { version = "0.1.0", path = "../meter-math" }
rand_chacha = "0.9"

[dev-dependencies]
approx = "0.5"
rand_chacha = "0.3"
tempfile = "3.8"
