[package]
name = "simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Space telescope optical and sensor simulation"
repository.workspace = true
license.workspace = true

[dependencies]
starfield = "0.2.3" # Star catalog functionality
nalgebra = "0.32" # Linear algebra
image = "0.25" # Image processing
ndarray = { version = "0.16", features = [
    "rayon",
] } # Multidimensional arrays with parallel computing
fitsio = { version = "0.21", features = ["array"] } # FITS file I/O with ndarray support
rayon = "1.7" # Parallel computing
num-traits = "0.2" # Numeric traits for generic math
float-cmp = "0.9" # Approximate floating point comparisons
once_cell = "1.19" # Lazy static initialization
resvg = { version = "0.45.0", features = ["text"] } # SVG rendering library
tiny-skia = "0.11" # Rendering backend for resvg
usvg = "0.45.0" # SVG parser for resvg
thiserror = "2.0" # Error handling
clap = { version = "4.5", features = [
    "derive",
] } # Command line argument parsing
log = "0.4"                   # Logging facade
env_logger = "0.11"           # Environment-based logger
url = "2.5"                   # URL parsing and manipulation
urlencoding = "2.1"           # URL encoding utilities
# Internal dependencies - needs frame-writer for FITS output
shared = { path = "../shared", default-features = false, features = ["frame-writer"] }

rand = "0.9"
rand_core = "0.6"
rand_distr = "0.5"
indicatif = "0.17"                                           # Progress bars
num_cpus = "1.16"                                            # CPU count detection

plotters = "0.3"                                             # Plotting library
rustfft = "6.3.0"
num-complex = "0.4.6"
scilib = "1.0"                                                    # Scientific computing library for Bessel functions
chrono = "0.4.41"
uom = "0.37.0"
meter-math = { version = "0.1.0", path = "../meter-math" }
shared-wasm = { version = "0.1.0", path = "../shared-wasm" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] } # Benchmarking
approx = "0.5"                                               # Approximate floating point comparisons
tempfile = "3.10"                                            # Temporary file handling
