[package]
name = "simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Space telescope optical and sensor simulation"
repository.workspace = true
license.workspace = true

[dependencies]
starfield = "0.9.1" # Star catalog functionality
image = "0.25" # Image processing
ndarray = { version = "0.16", features = [
    "rayon",
] } # Multidimensional arrays with parallel computing
rayon = "1.7" # Parallel computing
float-cmp = "0.9" # Approximate floating point comparisons
once_cell = "1.19" # Lazy static initialization
thiserror = "2.0" # Error handling
clap = { version = "4.5", features = [
    "derive",
] } # Command line argument parsing
log = "0.4"                   # Logging facade
env_logger = "0.11"           # Environment-based logger
url = "2.5"                   # URL parsing and manipulation
# Foundation crates from cfl-foundations
shared = { git = "https://github.com/CosmicFrontierLabs/cfl-foundations", branch = "meawoppl/update-starfield-0.9.1", default-features = false, features = ["frame-writer"] }
meter-math = { git = "https://github.com/CosmicFrontierLabs/cfl-foundations", branch = "meawoppl/update-starfield-0.9.1" }
shared-wasm = { git = "https://github.com/CosmicFrontierLabs/cfl-foundations", branch = "meawoppl/update-starfield-0.9.1" }

rand = "0.9"
rand_distr = "0.5"
indicatif = "0.17"
num_cpus = "1.16"

plotters = "0.3"
chrono = "0.4.41"
fitsio = { version = "0.9.2", package = "fitsio-pure", features = ["compat"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] } # Benchmarking
approx = "0.5"                                               # Approximate floating point comparisons
tempfile = "3.10"                                            # Temporary file handling

[[bench]]
name = "render"
harness = false
