[package]
name = "test-bench-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Yew WASM frontends for test-bench servers"
repository.workspace = true
license.workspace = true

[[bin]]
name = "calibrate_wasm"
path = "src/calibrate_main.rs"

[[bin]]
name = "fgs_wasm"
path = "src/fgs_main.rs"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared-wasm = { version = "0.1.0", path = "../shared-wasm" }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "Clipboard",
    "Document",
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlSelectElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "MouseEvent",
    "Navigator",
    "Touch",
    "TouchEvent",
    "TouchList",
    "Url",
    "Window",
] }
yew = { version = "0.21", features = ["csr"] }
