[package]
name = "test-bench-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

# WASM HTTP client
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6.0", features = ["http"] }

# Native HTTP client
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
