[package]
name = "test-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AprilTag detection and calibration test bench"
repository.workspace = true
license.workspace = true

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"
required-features = ["sdl2"]

[[bin]]
name = "calibrate_serve"
path = "src/bin/calibrate_serve.rs"
required-features = ["sdl2"]

[[bin]]
name = "cam_serve"
path = "src/bin/cam_serve.rs"

[[bin]]
name = "playerone_info"
path = "src/bin/playerone_info.rs"
required-features = ["playerone"]

[[bin]]
name = "cam_track"
path = "src/bin/cam_track.rs"
required-features = ["playerone"]

[[bin]]
name = "dark_frame_analysis"
path = "src/bin/dark_frame_analysis.rs"
required-features = ["playerone"]

[[bin]]
name = "led_latency_test"
path = "src/bin/led_latency_test.rs"

[dependencies]
anyhow = "1.0"
apriltag = "0.4.0"
axum = "0.7"
base64 = "0.22"
bytemuck = "1.24.0"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
gpiod = "0.3.0"
image = "0.25"
imageproc = "0.25"
libc = "0.2.177"
monocle = { version = "0.1.0", path = "../monocle" }
nalgebra = "0.34.1"
ndarray = "0.16"
hardware = { version = "0.1.0", path = "../hardware", optional = true }
rand = "0.8"
rayon = "1.11.0"
resvg = { version = "0.45.0", features = ["text"] }
rust-embed = "8.7.2"
rustfft = "6.4.1"
rusttype = "0.9.3"
sdl2 = { version = "0.37", features = ["image"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { version = "0.1.0", path = "../shared" }
simulator = { version = "0.1.0", path = "../simulator" }
tempfile = "3.23.0"
thiserror = "1.0"
tiny-skia = "0.11"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
usvg = "0.45.0"
zmq = "0.10.0"

[dev-dependencies]
approx = "0.5.1"
tokio-test = "0.4"

[features]
default = []
playerone = ["dep:hardware"]
nsv455 = ["dep:hardware"]
sdl2 = ["dep:sdl2"]
