[package]
name = "test-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Calibration test bench"
repository.workspace = true
license.workspace = true

[[bin]]
name = "calibration_controller"
path = "src/bin/calibration_controller.rs"

[[bin]]
name = "calibrate_serve"
path = "src/bin/calibrate_serve.rs"
required-features = ["sdl2"]

[[bin]]
name = "playerone_info"
path = "src/bin/playerone_info.rs"
required-features = ["playerone"]

[[bin]]
name = "fgs_server"
path = "src/bin/fgs_server.rs"
# Fine Guidance System server - camera display and star tracking

[[bin]]
name = "dark_frame_analysis"
path = "src/bin/dark_frame_analysis.rs"
# Note: Supports mock camera by default, or real cameras with playerone/nsv455 features

[[bin]]
name = "led_latency_test"
path = "src/bin/led_latency_test.rs"
required-features = ["linux-bins"]

[[bin]]
name = "orin_monitor"
path = "src/bin/orin_monitor.rs"
required-features = ["linux-bins"]

[[bin]]
name = "clock_comparison"
path = "src/bin/clock_comparison.rs"
required-features = ["linux-bins"]

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
bytemuck = "1.24.0"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
image = "0.25"
imageproc = "0.25"
libc = "0.2.177"
monocle = { version = "0.1.0", path = "../monocle" }
nalgebra = "0.32"
ndarray = "0.16"
hardware = { version = "0.1.0", path = "../hardware" }
prometheus = "0.14"
rand = "0.8"
rayon = "1.11.0"
resvg = { version = "0.45.0", features = ["text"] }
rust-embed = "8.7.2"
rustfft = "6.4.1"
rusttype = "0.9.3"
sdl2 = { version = "0.37", features = ["image"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Internal dependencies - needs full shared features for ZMQ, tracking, etc.
shared = { version = "0.1.0", path = "../shared" }  # uses default "full" feature
simulator = { version = "0.1.0", path = "../simulator" }
tempfile = "3.23.0"
thiserror = "1.0"
tiny-skia = "0.11"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
usvg = "0.45.0"
zmq = "0.10.0"
test-bench-shared = { version = "0.1.0", path = "../test-bench-shared" }
ureq = "3.1.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
libftd2xx = "0.33.1"
async-stream = "0.3"
futures = "0.3.31"

[target.'cfg(target_os = "linux")'.dependencies]
gpiod = "0.3.0"

[dev-dependencies]
approx = "0.5.1"
tokio-test = "0.4"

[features]
default = []
linux-bins = []
supported-camera = []
playerone = ["hardware/playerone", "supported-camera"]
nsv455 = ["supported-camera"]
sdl2 = ["dep:sdl2"]
