[package]
name = "test-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Calibration test bench"
repository.workspace = true
license.workspace = true

[[bin]]
name = "calibration_controller"
path = "src/bin/calibration_controller.rs"

[[bin]]
name = "calibrate_serve"
path = "src/bin/calibrate_serve.rs"
required-features = ["sdl2"]

[[bin]]
name = "playerone_info"
path = "src/bin/playerone_info.rs"
required-features = ["playerone"]

[[bin]]
name = "fgs_server"
path = "src/bin/fgs_server.rs"
required-features = ["pi-fsm"]
# Fine Guidance System server - camera display and star tracking (requires PI FSM controller)

[[bin]]
name = "fsm_calibration_controller"
path = "src/bin/fsm_calibration_controller.rs"
required-features = ["pi-fsm"]
# FSM (Fast Steering Mirror) calibration controller - requires PI FSM hardware

[[bin]]
name = "dark_frame_analysis"
path = "src/bin/dark_frame_analysis.rs"
# Note: Supports mock camera by default, or real cameras with playerone/nsv455 features

[[bin]]
name = "led_latency_test"
path = "src/bin/led_latency_test.rs"
required-features = ["linux-bins"]

[[bin]]
name = "orin_monitor"
path = "src/bin/orin_monitor.rs"
required-features = ["linux-bins"]

[[bin]]
name = "clock_comparison"
path = "src/bin/clock_comparison.rs"
required-features = ["linux-bins"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
bytemuck = "1.24.0"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
image = "0.25"
imageproc = "0.25"
libc = "0.2.177"
monocle = { version = "0.1.0", path = "../monocle" }
nalgebra = "0.32"
ndarray = "0.16"
# Hardware drivers - specify features needed for each deployment target
hardware = { version = "0.1.0", path = "../hardware", default-features = false }
prometheus = "0.14"
rand = "0.9"
rayon = "1.11.0"
resvg = { version = "0.45.0", features = ["text"] }
rust-embed = "8.7.2"
mime_guess = "2"
rustfft = "6.4.1"
rusttype = "0.9.3"
sdl2 = { version = "0.37", features = ["image"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Internal dependencies - needs full shared features for tracking, etc.
shared = { version = "0.1.0", path = "../shared" }  # uses default "full" feature
simulator = { version = "0.1.0", path = "../simulator" }
tempfile = "3.23.0"
thiserror = "1.0"
tiny-skia = "0.11"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
usvg = "0.45.0"
shared-wasm = { version = "0.1.0", path = "../shared-wasm" }
ureq = "3.1.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
libftd2xx = "0.33.1"
async-stream = "0.3"
futures = "0.3.31"
meter-math = { version = "0.1.0", path = "../meter-math" }
tokio-stream = { version = "0.1.18", features = ["sync"] }
chrono = "0.4.43"
rand_distr = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
gpiod = "0.3.0"

[dev-dependencies]
approx = "0.5.1"
tokio-test = "0.4"
wiremock = "0.6.5"

[features]
default = []
# Full feature set for Linux deployment (all hardware drivers)
full-linux = ["nsv455", "orin", "pi-fsm", "ftdi", "linux-bins"]
# Individual hardware features
nsv455 = ["hardware/nsv455", "supported-camera"]
orin = ["hardware/orin"]
pi-fsm = ["hardware/pi-fsm"]
ftdi = ["hardware/ftdi", "hardware/exail"]
# Existing features
linux-bins = ["orin"]
supported-camera = []
playerone = ["hardware/playerone", "supported-camera"]
sdl2 = ["dep:sdl2", "ftdi"]
