[package]
name = "viz"
version = "0.1.0"
edition = "2021"
description = "Data visualization tools for meter-sim"
authors = ["Meter-Sim team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
itertools = "0.11"
log = "0.4"