[package]
name = "display-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Fullscreen display utility for hardware testing"
repository.workspace = true
license.workspace = true

[[bin]]
name = "calibrate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sdl2 = { version = "0.37", features = ["image"] }
anyhow = "1.0"
image = "0.25"
resvg = { version = "0.45.0", features = ["text"] }
tiny-skia = "0.11"
usvg = "0.45.0"
rand = "0.8"
ndarray = "0.16.1"
rust-embed = "8.7.2"
