[package]
name = "poa_cameras"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "PlayerOne Astronomy camera support for test bench"
repository.workspace = true
license.workspace = true

[dependencies]
playerone-sdk = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.25.6"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
